# btc-dashboard

./: .env.example  .gitignore  AGENTS.md  Procfile  README.md  agent.md  app.py  pyproject.toml  railway.toml  render.yaml  requirements.txt
.github/workflows/: update-etf-flows.yml
btc_dashboard/: app.py  config.py  notifications.py  routes.py  security_services.py  services.py  signal_engine.py  worker.py  x_poster.py
btc_dashboard/static/: dashboard.js  private_daily_snapshot.js
btc_dashboard/templates/: dashboard.html  private_daily_snapshot.html
data/: bitcoin_fee_data.csv  etf_flows.json  viewer_stats.json
deploy/: Caddyfile
scripts/: collect_fees.py  update_etf_flows.py
tests/: test_app_security.py  test_etf_updater.py  test_frontend_price_refresh.py  test_services.py  test_signal_engine.py  test_worker.py  test_x_poster.py
