[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "btc-dashboard"
version = "0.1.0"
description = "Flask dashboard for Bitcoin analytics."
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0,<4",
    "pandas>=2.2,<3",
    "python-dotenv>=1.0,<2",
    "requests>=2.31,<3",
    "tweepy>=4.14,<5",
    "waitress>=3.0,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "ruff>=0.5,<1",
]

[tool.setuptools.packages.find]
include = ["btc_dashboard*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
